--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="A fun interactive game to learn Baseball rules! Identify strikes and balls to win." />
     <link rel="manifest" href="/manifest.json" />
-    <title>Strike or Ball? - Next Play Games</title>
+    <title>Strike or Ball?</title>
   </head>
   <body>
     <div id="root"></div>
